# llm-tools

./: .gitignore  llama-chat.py  main.py  nohup.out  proxy.py  pyproject.toml  requirements.txt
.cache/41/: cache.db
agent/: function-calling.py
alpaca/: finetune.py  my_finetune.py
alpaca/utils/: prompter.py
cv/: LicensePlateDetector.py  OCR.py
data/: tokenier.py
evaluate/: benchmark_throughput.py  evalscope_demo.py  llama-sst2.py  llm_human_eval.py  main.py  open_compass_eval.py  pyproject-evalscope.toml  pyproject.toml  sst2.py  test_ppl.py
file/: client.py  utils.py
inference/: client_demo.py  pyproject-sglang.toml  sglang_demo.py  swift_demo.py
models/: download.py  generate.py  qwen2.py  qwen3.py  test.py  tiny.py
outputs/20250402_133930/qwen2.5/: benchmark_args.json  benchmark_data.db  benchmark_percentile.json  benchmark_summary.json
outputs/20250402_134035/qwen2.5/: benchmark_args.json  benchmark_percentile.json  benchmark_summary.json
rag/: demo.py  mil.py
train/: config.py  dataset.py  finetune_freeze.py  model_hook.py  pretrain_data_process.py  sft_run.sh  tokenize_dataset_rows.py
train_swift/: meikan.py
validate/: perf_test.py
vlm/: vlm_yolo.py
web/: llama-chat.py  stable-diffusion.py
workspace/tools/code_interpreter/: kernel_connection_file_48a535d2-abae-477b-85c8-398691616582_27677.json  kernel_connection_file_a981b074-a289-4e49-aaf1-eb2a73cfd082_55701.json
workspace/tools/doc_parser/: f7e53833433ffa428dfd29775b0f1f824489eda97f515d7eb1ff561015b23676_without_chunking
